photo drag'n'drop

--- a/src-reg/blocks/input-img/input-img.pug
+++ b/src-reg/blocks/input-img/input-img.pug
@@ -1,13 +1,11 @@
 div(class="input-img")
-    input(type="file" id="file-input" name="file")
+    input(type="file" id="file-input" name="file" multiple)
     span Перетащи свои фото сюда
     span или 
         label(for="file-input") загрузи из галереи
-.photo-input__descr Допустимые форматы jpg, jpeg, png. Минимальный размер фото 500 500
-
 div(class="photos-download")
-    .photo-box
-    .photo-box
-button(class="next-btn") Далее
+.photo-input__descr Допустимые форматы jpg, jpeg, png. Минимальный размер фото 500 500
+    
+button(class="next-btn img") Далее
 
          
