help modal window added

--- a/src-main/assets/scss/main.scss
+++ b/src-main/assets/scss/main.scss
@@ -58,6 +58,8 @@ h2 {
 @import "../../blocks/chat/chat";
 @import "../../blocks/complaint/complaint";
 @import "../../blocks/no-internet/no-internet";
+@import "../../blocks/nav/nav";
+@import "../../blocks/support/support";
 
 // Pages
 @import "../../assets/scss/modules/main-page.scss";
