--- a/src-main/blocks/filters/filters.pug
+++ b/src-main/blocks/filters/filters.pug
@@ -1,4 +1,4 @@
-div(class="filters")
+div(class="filters hide")
     .filters__icon
         img(class="gray-icon" src="/assets/img/filters.svg", alt="Иконка фильтра")
         img(class="pink-icon hide" src="/assets/img/filters-active.svg", alt="Иконка фильтра")
