--- a/src-main/blocks/header/header.pug
+++ b/src-main/blocks/header/header.pug
@@ -1,5 +1,5 @@
 .header
     include ../filters/filters
     img(src="/assets/img/logo.svg", alt="Firstep")
-    .header__empty-place
+    .header__empty-place.hide
         
