--- a/src-main/blocks/photo-name/photo-name.pug
+++ b/src-main/blocks/photo-name/photo-name.pug
@@ -1,5 +1,6 @@
 .photo-name
+    button(class="photo-name__back-btn")
     .photo-name__photo
     .photo-name__name 
         p.name Ольга
-        span.rewrite Редактировать профиль
+        span(class="rewrite hide") Редактировать профиль
