--- a/src-main/blocks/header/header.scss
+++ b/src-main/blocks/header/header.scss
@@ -1,6 +1,6 @@
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     height: 80px;
     padding: 0 25px;
