--- a/src-main/blocks/switcher/switcher.pug
+++ b/src-main/blocks/switcher/switcher.pug
@@ -1,4 +1,4 @@
-.switcher
+div(class="switcher hide")
     div(class="switcher__item switch-checked") 
         .message-text Сообщения
         div(class="message-amount switcher__amount") 4
